New version using a URL instead of a URI. Makes it work on Hanning's computer. We'll see if it works elsewhere.